<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2792F4"
    android:clipChildren="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ai.houzi.xiao.widget.ElasticScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="always">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:id="@+id/tvCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="西安"
                    android:textColor="@color/white"
                    android:textSize="14dp" />

                <ImageView
                    android:id="@+id/ivMore"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:padding="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/icon_more_setting" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvWendu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="23"
                    android:textColor="@color/white"
                    android:textSize="80dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/tvWendu"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@id/tvWendu"
                    android:text="○"
                    android:textColor="@color/white"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tvState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/tvWendu"
                    android:layout_marginBottom="20dp"
                    android:layout_toRightOf="@id/tvWendu"
                    android:text="多云"
                    android:textColor="@color/white"
                    android:textSize="14dp" />
            </RelativeLayout>

            <ai.houzi.xiao.widget.WeatherView
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="250dp" />

            <com.dd.CircularProgressButton
                android:id="@+id/circularButton1"
                android:layout_width="196dp"
                android:layout_height="64dp"
                android:textColor="@color/cpb_white"
                android:textSize="18sp"
                app:cpb_cornerRadius="48dp"
                app:cpb_iconComplete="@drawable/ic_action_accept"
                app:cpb_iconError="@drawable/ic_action_cancel"
                app:cpb_textIdle="@string/Upload" />

            <com.dd.CircularProgressButton
                android:id="@+id/circularButton2"
                android:layout_width="196dp"
                android:layout_height="64dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/cpb_white"
                android:textSize="18sp"
                app:cpb_cornerRadius="48dp"
                app:cpb_textComplete="@string/Complete"
                app:cpb_textError="@string/Error"
                app:cpb_textIdle="@string/Upload" />
        </LinearLayout>
    </ai.houzi.xiao.widget.ElasticScrollView>
</LinearLayout>